[package]
name = "hypermon"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.18"
anyhow = "1.0.86"
dotenv = "0.15.0"
color-eyre = "0.6"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
actix-web = "4.9.0"
thiserror = "1.0.63"
prometheus = "0.13.4"
lazy_static = "1.5.0"
