[package]
name = "hypermon"
version = "0.6.1"
edition = "2021"
rust-version = "1.83.0"

build = "build.rs"

[dependencies]
clap = "4.5.18"
anyhow = "1.0.86"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
actix-web = "4.9.0"
thiserror = "1.0.63"
prometheus = "0.13.4"
prettytable = "0.10.0"
web3 = "0.19.0"
